--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -16,6 +16,7 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v3
       - name: Setup Docker BuildKit
+        if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
         #Only build containers for mainstream 64-bit architectures.
         run: |
           sudo docker buildx create --platform linux/amd64,linux/arm64 --use
@@ -25,13 +26,14 @@ jobs:
         uses: jungwinter/split@v2
         with:
           msg: ${{ github.repository }}
-          #Repository owner's name mustn't includes any slash. 
+          #Repository owner's name mustn't includes any slash.
           separator: "-"
       - name: Setup container registry credentials
         env:
           CONTAINER_REGISTRY_NAMESPACE: ${{ secrets.CONTAINER_REGISTRY_NAMESPACE }}
           CONTAINER_REGISTRY_USERNAME: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
           CONTAINER_REGISTRY_TOKEN: ${{ secrets.CONTAINER_REGISTRY_TOKEN }}
+        if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
         run: |
           sudo docker login "$CONTAINER_REGISTRY_NAMESPACE" \
             --username "$CONTAINER_REGISTRY_USERNAME" \
@@ -40,6 +42,7 @@ jobs:
         env:
           CONTAINER_REGISTRY_NAMESPACE: ${{ secrets.CONTAINER_REGISTRY_NAMESPACE }}
           CONTAINER_REGISTRY_USERNAME: ${{ secrets.CONTAINER_REGISTRY_USERNAME }}
+        if: ${{ github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
         run: |
           ARGS=()
           for i in $(find ./VERSIONS/ -type f); do
@@ -51,3 +54,15 @@ jobs:
             --label org.opencontainers.image.revision=${{ github.sha }} \
             --tag "$CONTAINER_REGISTRY_NAMESPACE/$CONTAINER_REGISTRY_USERNAME/${{ steps.name.outputs._1 }}:latest" \
             --tag "$CONTAINER_REGISTRY_NAMESPACE/$CONTAINER_REGISTRY_USERNAME/${{ steps.name.outputs._1 }}:$(< DISPLAY_VERSION)" .
+      - name: Build container images
+        #Test build for pull requests
+        if: ${{ github.event_name == 'pull_request' }}
+        run: |
+          ARGS=()
+          for i in $(find ./VERSIONS/ -type f); do
+            ARGS+=('--build-arg' "${i##*/}=$(< $i)")
+          done
+          sudo docker build "${ARGS[@]}" --tag ${{ steps.name.outputs._1 }} \
+            --label org.opencontainers.image.created="$(date --rfc-3339 seconds --utc)" \
+            --label org.opencontainers.image.version=$(< DISPLAY_VERSION) \
+            --label org.opencontainers.image.revision=${{ github.sha }} .
